# LolzteamWorflowBuilder

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  install.sh  update.sh
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_integrations_and_n8n.py  003_cascade_deletes.py  004_funpay_accounts.py  005_lzt_accounts_and_files.py  006_drop_funpay_accounts.py  007_credential_events.py
backend/app/: config.py  logging_config.py  main.py  owner.py
backend/app/catalog/: __init__.py  loader.py  routes.py
backend/app/catalog/data/: endpoints.json
backend/app/credentials/: audit.py  routes.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/engine/: errors.py  executor.py  file_utils.py  http_node.py  http_util.py  interpolator.py  lzt_client.py  lzt_nodes.py  openapi_handler.py  rate_limit.py  registry.py  safe_regex.py  topology.py  url_guard.py  utility_nodes.py  validate.py
backend/app/flows/: files.py  routes.py  schemas.py
backend/app/integrations/: cache.py  fetcher.py  generator.py  loader.py  parser.py  routes.py  schemas.py
backend/app/lzt_accounts/: __init__.py  routes.py
backend/app/security/: crypto.py  headers.py  redis_lock.py  request_context.py
backend/app/tasks/: celery_app.py  flow_tasks.py
backend/app/webhooks/: routes.py
backend/tests/: test_crypto.py  test_engine.py  test_safe_regex.py  test_url_guard.py  test_validate.py
deploy/: nginx.conf  (+1 more)
(+47 files in other folders)
